ansible/playbooks/files/demo/01-Deployment/10-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        command:
        - /bin/sh
        - -c
        - 'sed "s/NODE_NAME/${NODE_NAME}/g" /usr/share/nginx/html/index.html.template | sed "s/POD_HOSTNAME/${POD_HOSTNAME}/g" > /usr/share/nginx/html/index.html; nginx -g "daemon off;" '
        image: nginx:alpine
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/nginx.conf
          subPath: nginx.conf
        - name: nginx-config
          mountPath: /usr/share/nginx/html/index.html.template
          subPath: index.html.template
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
